[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "fetch research papers from PubMed API"
authors = [
    {name = "pratik26198",email = "pratik260198@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "lxml (>=5.3.1,<6.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

